sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:24: error: Unmatched closing brace '}' ignored here
}
^